<?xml version="1.0" encoding="utf-8"?>

<resources>

    <!-- ===== INFORMACIÓN GENERAL ===== -->

    <!-- Nombre que aparecerá para identificar la aplicación -->
    <string name="app_name">Calculadora UMB</string>

    <!-- Título de la pantalla principal -->
    <string name="titulo_calculadora">Calculadora UMB</string>

    <!-- Texto secundario de la pantalla principal -->
    <string name="subtitulo_aplicacion">
        Desarrollo de aplicaciones móviles
    </string>

    <!-- Nombre de la actividad académica -->
    <string name="actividad_modulo">Actividad 5 - Módulo 3</string>


    <!-- ===== MENÚ PRINCIPAL ===== -->

    <!-- Texto del botón que abre las operaciones -->
    <string name="boton_operaciones">Operaciones</string>

    <!-- Texto del botón de información -->
    <string name="boton_acerca_de">Acerca de</string>


    <!-- ===== OPERACIONES MATEMÁTICAS ===== -->

    <!-- Título de la pantalla donde se escoge la operación -->
    <string name="titulo_operaciones">Selecciona una operación</string>

    <string name="suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="multiplicacion">Multiplicación</string>
    <string name="division">División</string>


    <!-- ===== CAMPOS DE LA CALCULADORA ===== -->

    <string name="primer_numero">Primer número</string>
    <string name="segundo_numero">Segundo número</string>

    <!-- Texto que aparece dentro del campo antes de escribir -->
    <string name="ingrese_numero">Ingrese un número</string>

    <string name="calcular">Calcular</string>
    <string name="limpiar">Limpiar</string>
    <string name="volver_inicio">Volver al inicio</string>
    <string name="volver_operaciones">Volver a operaciones</string>
    <string name="resultado">Resultado</string>

    <!-- Mensaje inicial del cuadro de resultado -->
    <string name="resultado_inicial">
        El resultado aparecerá aquí
    </string>


    <!-- ===== MENSAJES DE VALIDACIÓN ===== -->

    <!-- Mensaje cuando alguno de los campos está vacío -->
    <string name="campos_obligatorios">
        Debe ingresar los dos números
    </string>

    <!-- Mensaje cuando se intenta dividir entre cero -->
    <string name="division_cero">
        No es posible dividir entre cero
    </string>

    <!-- Mensaje cuando el dato no puede convertirse en número -->
    <string name="numero_invalido">
        Ingrese números válidos
    </string>


    <!-- ===== INFORMACIÓN DE LA APLICACIÓN ===== -->

    <string name="titulo_acerca_de">
        Acerca de la aplicación
    </string>

    <string name="descripcion_aplicacion">
        Aplicación desarrollada como parte de la Actividad 5 del
        Módulo 3: Introducción al desarrollo en dispositivos móviles.
    </string>

    <string name="titulo_desarrolladores">Desarrolladores</string>

    <!-- Debes cambiar estos textos por los nombres reales -->
    <string name="integrante_1">
        Integrante 1: Llerilin Esteisy Gonzalez Vargas
    </string>

    <string name="integrante_2">
        Estudiante de Ingenería de Software
    </string>

    <string name="integrante_3">
        Universidad Manuela Beltrán
    </string>

    <string name="version_aplicacion">Versión 1.0</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>